# trustlayer

./: .gitignore  README.md  prd.md  pyproject.toml
docs/: ARCHITECTURE.md
src/trustlayer/: __init__.py  api.py  calibration.py  conformal.py  escalation.py  monitor.py
tests/: test_calibration.py  test_conformal.py  test_escalation.py
