[project]
name = "trustlayer"
version = "0.1.0"
description = "Enterprise AI Reliability Platform — conformal prediction, calibration monitoring, and human escalation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Portfolio Project", email = "your@email.com" }]
keywords = ["ai-reliability", "conformal-prediction", "calibration", "mlops", "uncertainty"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dashboard = ["evidently>=0.4", "plotly>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/yourusername/trustlayer"
Repository = "https://github.com/yourusername/trustlayer"
Issues = "https://github.com/yourusername/trustlayer/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trustlayer"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
